syntax = "proto3";

package com.cognite.beam.proto;

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message TimeseriesPointPost {
    oneof idType {
        int64 id = 1;
        string external_id = 2;
    }

    int64 timestamp = 3;
    oneof valueType {
        double value_num = 4;
        string value_string = 5;
    }

    bool isStep = 6;
}

